Fix bug where placeholder was shown when there was no cover image on safari

--- a/themes/hugo-notepadium/assets/css/style.css
+++ b/themes/hugo-notepadium/assets/css/style.css
@@ -133,7 +133,6 @@ samp {
 pre {
     display: block;
     text-align: left;
-    font-size: 80%;
     line-height: 1.5em;
     margin: 0;
     padding: 16px;
